--- a/website/index.html
+++ b/website/index.html
@@ -183,6 +183,7 @@
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
+                <p>&copy; 2025 Seppänen Aleksi</p>
                 <div class="row align-items-center">
             <div class="col-lg-4 my-3 my-lg-0"></div>
         </div>
